--- a/templates/grupo.html
+++ b/templates/grupo.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Grupo</title>
     <link rel="stylesheet" href="/static/style.css">
+
 </head>
 <body>
     <h1>Integrantes do Grupo</h1>
     <ul>
-        <li>Fulano – Lógica de Conversão</li>
-        <li>Ciclano – HTML e CSS</li>
-        <li>Beltrano – Integração Flask</li>
+        <li>Todos – Lógica de Conversão</li>
+        <li>Letícia e Enrique – HTML e CSS</li>
+        <li>Rafael – Integração Flask</li>
     </ul>
     <nav>
         <a href="/">Início</a> |
