--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,80 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Sogoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     background-color: #f0f0f8;
-    padding: 20px;
+    color: #3d1818;
+    margin: 0px;
+    padding: 40px 20px;
+}
+h1, h2{
+    color: #722F37;
+    margin-bottom: 20px;
+}
+
+p{
+    max-width: 700px;
+    margin: 0 auto;
+    font-size: 18px;
+    text-align: justify;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 20px auto;
+    max-width: 400px;
+}
+
+li {
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    padding: 12px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
 }
 
 input, select, button {
     margin: 10px;
-    padding: 10px;
+    padding: 10px 15px;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+
+input:focus, select:focus {
+    outline: none;
+    border-color: #5e1224;
+    box-shadow: 0 0 4px rgba(173, 52, 52, 0.5);
+}
+
+button {
+    background-color: #5e1224;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover{
+    background-color: #672535;
+}
+
+label {
+    font-weight: bold;
+    margin: 0 5px;
+}
+
+nav {
+    margin-top: 30px;
+}
+
+nav a {
+    color: #5e1224;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 10px;
+}
+
+nav a:hover {
+    color: rgb(64, 5, 5);
 }
